--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-Linux Kernel 3.0.16 for Htc Explorer (Pico)
+ECLIPSE KERNEL for PICO
+=======================
+
+BASED ON sakindia123's Linux Kernel 3.0.16 for Htc Explorer (Pico)
+
 
 WORKING
 =======
