--- a/README
+++ b/README
@@ -3,6 +3,10 @@ ECLIPSE KERNEL for PICO
 
 BASED ON sakindia123's Linux Kernel 3.0.16 for Htc Explorer (Pico)
 
+FEATURES
+========
+
+Will be updated soon
 
 WORKING
 =======
